<resources>
    <string name="app_name">TextRecognition</string>

  <string name="select_image">Select image from:</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="detect_text">Detect Text</string>
    <string name="detected_text">Detected Text:</string>
    <string name="copy_text">Copy Text</string>
    <string name="image">image</string>
    <string name="enter_text">What do you want to listen to?</string>
    <string name="pitch">Pitch</string>
    <string name="speed">Speed</string>
    <string name="accent">Accent</string>
    <string name="talk">Talk!</string>
    <string name="stop">Stop!</string>
    <string name="voice">Voice</string>
</resources>